--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -210,7 +210,18 @@
     color: white;
     line-height: 1.4;
 }
-
+.project_card__images{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+.project_card__images img{
+    width: 50px;
+    height: auto;
+    gap: 30px;
+    object-fit: contain;
+    margin: 0 10px;
+}
 /* Contatos */
 
 .contact_card{
