--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -16,3 +16,81 @@ body {
     text-align: left;
 }
 
+@media (max-width: 768px) {
+   
+    .navegacao {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navegacao a {
+        display: block;
+        padding: 10px;
+    }
+
+    
+    .main_section_center {
+        text-align: center;
+        padding: 20px;
+    }
+
+    .icon-container {
+        display: flex;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    
+    .container_content {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .circle img {
+        width: 100px;
+        height: 100px;
+    }
+
+    .resume_card {
+        width: 90%;
+    }
+
+    
+    .tech {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .tech_card {
+        width: 40%;
+    }
+
+    
+    .project_card {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .project_card img {
+        width: 90%;
+    }
+
+    
+    .contact_card2 {
+        width: 90%;
+        padding: 10px;
+    }
+
+    input, textarea {
+        width: 100%;
+    }
+    
+    footer {
+        text-align: center;
+        padding: 20px;
+    }
+}
